--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ken's Portfolio</title>
-    <link rel="icon" href="Pictures/Logo.png" type="image/x-icon">
+    <link rel="icon" href="Pictures/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
