--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ken's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" href="Pictures/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -16,25 +18,22 @@
             <div class="navmenuRight">
                 <a href="#">Home</a>
                 <a href="#PortfolioText">Portfolio</a>
-                <a href="#skillsid">Skills</a>
+                <a href="#SkillsText">Skills</a>
                 <a href="#resume">Resume</a>
                 <a href="#github">Github</a>
-                <a href="#aboutme">About Me</a>
             </div>
         </div>
         <div class="namedesign">
-            <h1 id="nameheading">KEN INOCENCIO</h1>
-            <p id="namesubheading">An Aspiring Software Developer</p>
+            <h1>KEN INOCENCIO</h1>
+            <p>An Aspiring Software Developer</p>
         </div>
         <div class="Home">
-            <h1 id="description">
-                1st Year Bachelor of Science in Computer<br />
-                Science. Studying in De La Salle <br />
-                University Dasmarinas Cavite.
+            <h1>
+                1st Year Bachelor of Science in Computer Science. <br />
+                Studying in <span>De La Salle University Dasmarinas Cavite.</span>
             </h1>
             <img src="Pictures/ProfileImg.jpg" alt="" class="ProfileImg">
         </div>
-
         <h1 id="PortfolioText">
             <hr>
             Portfolio
@@ -89,16 +88,18 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <div class="Skills" id="skillsid">
-            <H1>Skills</H1>
+        <h1 id="SkillsText">
+            <hr>
+            Skills
+        </h1>
+        <div class="Skills">
             <h2>Java</h2>
             <div class="Skillset">
                 <div class="skill java">99%</div>
             </div>
             <h2>Javascript</h2>
             <div class="Skillset">
-                <div class="skill javascript">30%</div>
+                <div class="skill javascript">50%</div>
             </div>
             <h2>HTML</h2>
             <div class="Skillset">
@@ -106,18 +107,20 @@
             </div>
             <h2>CSS</h2>
             <div class="Skillset">
-                <div class="skill css">50%</div>
+                <div class="skill css">30%</div>
             </div>
-        </div>
-        
-        <footer>
-            <hr>
-            <h1>Contact</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus posuere efficitur. <br> Vestibulum nec dui eu ligula blandit tempor eget sed mauris.</p>
-            <p>FACEBOOK EMAIL TWITTER INSTAGRAM LINKEDIN</p>
-        </footer>
-        
+        </div>   
     </div>
+    <footer>
+        <hr>
+        <h1>Contact</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus posuere efficitur. <br> Vestibulum nec dui eu ligula blandit tempor eget sed mauris.</p>
+        <div class="Socials">
+            <a href="https://www.facebook.com/keninocencio/" target="_blank"><img src="Pictures/Facebook-logo.png" alt=""></a>
+            <a href="mailto:inocencioken5@gmail.com" target="_blank"><img src="Pictures/Gmail-logo.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/ken-inocencio-692b5b213/" target="_blank"><img src="Pictures/Linkedin-logo.png" alt=""></a>
+        </div>
+    </footer>
 </body>
 
 </html>
