--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
             <p>An Aspiring Software Developer</p>
         </div>
         <div class="Home">
+            <img src="Pictures/ProfileImg.jpg" alt="" class="ProfileImg">
             <h1>
-                1st Year Bachelor of Science in Computer Science. <br />
+                1st Year Bachelor of Science in Computer Science.
                 Studying in <span>De La Salle University Dasmarinas Cavite.</span>
             </h1>
-            <img src="Pictures/ProfileImg.jpg" alt="" class="ProfileImg">
+            
         </div>
         <h1 id="PortfolioText">
             <hr>
