--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ken's Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">   
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
     <link rel="icon" href="Pictures/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,24 +17,17 @@
     <div class="container">
         <div class="navmenu">
             <img src="Pictures/Logo.png" alt="" class="logo">
-            <div class="navmenuRight">
-                <a href="#">Home</a>
-                <a href="#PortfolioText">Portfolio</a>
-                <a href="#SkillsText">Skills</a>
-                <a href="#resume">Resume</a>
-                <a href="#github">Github</a>
-            </div>
-        </div>
-        <div class="namedesign">
-            <h1>KEN INOCENCIO</h1>
-            <p>An Aspiring Software Developer</p>
         </div>
         <div class="Home">
-            <img src="Pictures/ProfileImg.jpg" alt="" class="ProfileImg">
-            <h1>
+            <h1>KEN INOCENCIO</h1>
+            <img src="Pictures/Github.png" alt="" class="githublogo">
+            <img src="Pictures/Resume.png" alt="" class="resumelogo">
+            <a href="https://www.linkedin.com/in/ken-inocencio-692b5b213/" target="_blank"><img src="Pictures/Linkedin-logo.png" alt=""></a>
+
+            <h2>
                 1st Year Bachelor of Science in Computer Science.
                 Studying in <span>De La Salle University Dasmarinas Cavite.</span>
-            </h1>
+            </h2>
             
         </div>
         <h1 id="PortfolioText">
@@ -112,16 +107,6 @@
             </div>
         </div>   
     </div>
-    <footer>
-        <hr>
-        <h1>Contact</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus posuere efficitur. <br> Vestibulum nec dui eu ligula blandit tempor eget sed mauris.</p>
-        <div class="Socials">
-            <a href="https://www.facebook.com/keninocencio/" target="_blank"><img src="Pictures/Facebook-logo.png" alt=""></a>
-            <a href="mailto:inocencioken5@gmail.com" target="_blank"><img src="Pictures/Gmail-logo.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/ken-inocencio-692b5b213/" target="_blank"><img src="Pictures/Linkedin-logo.png" alt=""></a>
-        </div>
-    </footer>
 </body>
 
 </html>
