Fresh website look

--- a/index.html
+++ b/index.html
@@ -6,107 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ken's Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c8a6857732.js" crossorigin="anonymous"></script>
     <link rel="icon" href="Pictures/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="navmenu">
-            <img src="Pictures/Logo.png" alt="" class="logo">
-        </div>
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="logo">
+                <a href="#" class="nav-link">
+                    <span><h1 class="nav-item" id="middlecomp">K</h1></span>
+                    <span class="link-text"><h1>INOCENCIO</h1></span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">   
+                    <span class="fas fa-medal fa-2x" id="middlecomp"></span>
+                    <p class="link-text">Skills</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">   
+                    <span class="fas fa-archive fa-2x" id="middlecomp"></span>
+                    <p class="link-text">Projects</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">   
+                    <span class="far fa-file fa-2x" id="file"></span>
+                    <p class="link-text">Resume</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">   
+                    <span class="fab fa-github fa-2x" id="middlecomp"></span>
+                    <p class="link-text">Github</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">   
+                    <span class="fab fa-linkedin-in fa-2x" id="middlecomp"></span>
+                    <p class="link-text">LinkedIn</p>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <main>
         <div class="Home">
+            
             <h1>KEN INOCENCIO</h1>
-            <img src="Pictures/Github.png" alt="" class="githublogo">
-            <img src="Pictures/Resume.png" alt="" class="resumelogo">
-            <a href="https://www.linkedin.com/in/ken-inocencio-692b5b213/" target="_blank"><img src="Pictures/Linkedin-logo.png" alt=""></a>
-
             <h2>
                 1st Year Bachelor of Science in Computer Science.
                 Studying in <span>De La Salle University Dasmarinas Cavite.</span>
             </h2>
-            
         </div>
-        <h1 id="PortfolioText">
-            <hr>
-            Portfolio
-        </h1>
-        <div class="Portfolio">
-            <div class="PortfolioCard">
-                <img src="Pictures/Project.jpg" alt="">
-                <div class="projectDesc">
-                    <h4><b>LOREM IPSUM</b></h4>
-                    <p>Lorem ipsum dolor sit amet,</p>
-                    <p>consectetur adipiscing elit.</p>
-                </div>
-            </div>
-            <div class="PortfolioCard">
-                <img src="Pictures/Project.jpg" alt="">
-                <div class="projectDesc">
-                    <h4><b>LOREM IPSUM</b></h4>
-                    <p>Lorem ipsum dolor sit amet,</p>
-                    <p>consectetur adipiscing elit.</p>
-                </div>
-            </div>
-            <div class="PortfolioCard">
-                <img src="Pictures/Project.jpg" alt="">
-                <div class="projectDesc">
-                    <h4><b>LOREM IPSUM</b></h4>
-                    <p>Lorem ipsum dolor sit amet,</p>
-                    <p>consectetur adipiscing elit.</p>
-                </div>
-            </div>
-            <div class="PortfolioCard">
-                <img src="Pictures/Project.jpg" alt="">
-                <div class="projectDesc">
-                    <h4><b>LOREM IPSUM</b></h4>
-                    <p>Lorem ipsum dolor sit amet,</p>
-                    <p>consectetur adipiscing elit.</p>
-                </div>
-            </div>
-            <div class="PortfolioCard">
-                <img src="Pictures/Project.jpg" alt="">
-                <div class="projectDesc">
-                    <h4><b>LOREM IPSUM</b></h4>
-                    <p>Lorem ipsum dolor sit amet,</p>
-                    <p>consectetur adipiscing elit.</p>
-                </div>
-            </div>
-            <div class="PortfolioCard">
-                <img src="Pictures/Project.jpg" alt="">
-                <div class="projectDesc">
-                    <h4><b>LOREM IPSUM</b></h4>
-                    <p>Lorem ipsum dolor sit amet,</p>
-                    <p>consectetur adipiscing elit.</p>
-                </div>
-            </div>
-        </div>
-        <h1 id="SkillsText">
-            <hr>
-            Skills
-        </h1>
-        <div class="Skills">
-            <h2>Java</h2>
-            <div class="Skillset">
-                <div class="skill java">99%</div>
-            </div>
-            <h2>Javascript</h2>
-            <div class="Skillset">
-                <div class="skill javascript">50%</div>
-            </div>
-            <h2>HTML</h2>
-            <div class="Skillset">
-                <div class="skill html">70%</div>
-            </div>
-            <h2>CSS</h2>
-            <div class="Skillset">
-                <div class="skill css">30%</div>
-            </div>
-        </div>   
-    </div>
+        <main>
 </body>
 
 </html>
