--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ken Inocencio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c8a6857732.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="Pictures/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="Pictures/favicon.ico" type="image/x-icon">
+    <title>Projects</title>
 </head>
 
 <body>
@@ -80,24 +80,6 @@
             </ul>
         </div>
         <div class="Home">
-            <h1>KEN INOCENCIO</h1>
-            <h2>
-                Hello, my name is <span>Ken Inocencio.</span>
-                an aspiring <span>Software Developer.</span>
-                1st Year Bachelor of Science in Computer Science.
-                Currently Studying in <span>De La Salle University Dasmarinas Cavite.</span>
-            </h2>
-            <h3 id="AboutMe">About Me!</h3>
-            <p>Since i was a kid, i was interested in <span>computers</span> and how <span>Technology</span> works.
-                <span>Curiousity</span> helped me develop what i love doing now.
-            </p>
-            <p>
-                When <span>Java</span> was first introduced to me. I was <span>fascinated</span> on how i could tell
-                the computer to do a certain task, this made me feel <span>excited</span> and did not
-                want to stop coding ever since. which led to me <span>venturing</span> out to other
-                language like <span>javascript</span> and making side project that you can check out in
-                <span>Projects</span>
-            </p>
         </div>
     </main>
     <script>
@@ -120,7 +102,7 @@
                 xp += ((mouseX - xp) / 6);
                 yp += ((mouseY - yp) / 6);
                 $(".cursor-lazy").css({ transform: 'translateX(' + (xp - 15) + 'px) translateY(' + (yp - 15) + 'px)' });
-            }, 10);
+            }, 20);
         })
     </script>
 </body>
