--- a/projects.html
+++ b/projects.html
@@ -29,12 +29,6 @@
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                    <span class="fas fa-medal fa-2x" id="middlecomp"></span>
-                    <p class="link-text">Skills</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
                     <span class="fas fa-archive fa-2x" id="middlecomp"></span>
                     <p class="link-text">Projects</p>
                 </a>
@@ -79,8 +73,26 @@
                 <li></li>
             </ul>
         </div>
-        <div class="Home">
-        </div>
+        <section class="card-list">
+            <article class="card">
+                <header>
+                    <p>July 2 2021</p>
+                    <h2>LOREM IPSUM NDUKJABKDABKWDKBU DBABDKWBKD DBNASKUDBKSK</h2>
+                </header>
+            </article>
+            <article class="card">
+                <header>
+                    <p>July 2 2021</p>
+                    <h2>LOREM IPSUM NDUKJABKDABKWDKBU DBABDKWBKD DBNASKUDBKSK</h2>
+                </header>
+            </article>
+            <article class="card">
+                <header>
+                    <p>July 2 2021</p>
+                    <h2>LOREM IPSUM NDUKJABKDABKWDKBU DBABDKWBKD DBNASKUDBKSK</h2>
+                </header>
+            </article>
+        </section>
     </main>
     <script>
         $(window).ready(function () {
